--- a/Assignment-20.ipynb
+++ b/Assignment-20.ipynb
@@ -30,12 +30,7 @@
     "4. Read toothpaste sales data of each month and show it using a scatter plot\n",
     "5. Read face cream and face wash product sales data and show it using the bar chart\n",
     "6. Read Bathing soap, face wash of all months and display it using the Subplot\n",
-    "7. Read the total profit of each month and show it using the histogram to see most common profit ranges \n",
-    "\n",
-    "\n",
-    "### Prepare a documentation of all the above questions\n",
-    "#### Write the question in the document and paste the code snippet of your solution in the document\n",
-    "#### After generating the plots, paste the plot into the document and write down your observations below the plots.\n"
+    "7. Read the total profit of each month and show it using the histogram to see most common profit ranges "
    ]
   },
   {
@@ -724,6 +719,17 @@
    ],
    "source": [
     "plt.hist(df['total_profit'],[150000,200000,250000,300000,350000,400000,450000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Prepare a documentation of all the above questions\n",
+    "#### Write the question in the document and paste the code snippet of your solution in the document\n",
+    "#### After generating the plots, paste the plot into the document and write down your observations below the plots.\n"
    ]
   },
   {
